# GaiaPlatform

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .tsan-suppressions  Doxyfile  LICENSE.md  LICENSE.txt  README.md  build.sh  default_incubator.conf  incubator.conf  incubator.cpp  incubator.ruleset  install.sh  launch.json  lint.sh  observations.md  pre-commit  pre-commit.md  properties.sh  restart_server.sh  run.sh  suite.sh  summarize_results.py  test.sh
clang/lib/Sema/: CMakeLists.txt  SemaCast.cpp  SemaDeclAttr.cpp  SemaExpr.cpp  SemaExprCXX.cpp  SemaGaia.cpp
demos/: CMakeLists.txt  README.md  gdev.cfg
demos/Campus/: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_edge.txt  CMakeLists_mono.txt  CMakeLists_monolith.txt  README.md  incubator_rules.cpp  main.cpp  rules.cpp
demos/Campus/edge/: .env  start_display.bat  start_display.sh  start_sensor.bat  start_sensor.sh
demos/Campus/inc/: campus_demo.hpp  icampus.hpp  message.hpp  message_bus.hpp
demos/Campus/src/: campus.ddl  campus.ruleset  campus_demo.cpp  campus_demo_term.cpp  gaia_conf.toml  incubator.ddl  main.cpp  rules.cpp
demos/Campus/tests/: test_campus_demo.cpp
demos/airport/: README.md
demos/airport/db_mapper/: __init__.py  airline_mapping.py  mapping.py  node_query.py  route_mapping.py
demos/airport/flatbuffers/: airport.fbs  airport_builder.h  airport_reader.h  airport_verifier.h  event_log.fbs  event_log_builder.h  event_log_reader.h  event_log_verifier.h  gaia_baseclasses.fbs  people_example.fbs  system_schemas.fbs
demos/airport/setup/: airportdemo_gaia_tables_cleanup.sql  airportdemo_gaia_tables_setup.sql  airportdemo_setup.sql  airportdemo_setup_all.sql  gaia_init.py  gaia_tables_cleanup.sql  gaia_tables_setup.sql  setup.py
demos/airport/tests/: test_aids.py  test_airport.py
demos/airport_database/: README.md
demos/airport_q1/: README.md
demos/airport_q1/airimport/: CMakeLists.txt  README.md  data_loader.cpp  data_loader.hpp
demos/airport_q1/airqueries/: CMakeLists.txt  README.md  air_queries.cpp
demos/airport_q1/inc/: airport_q1.fbs  airport_q1_gaia_generated.h  gaia_object_q1_demo.hpp  nullable_string.hpp  performance_timer.hpp
demos/cow_se/: CMakeLists.txt
demos/cow_se/inc/: cow_se.h
demos/cow_se/src/: CowStorageEngine.java  cow_se_jwrap.cpp  cow_se_pywrap.cpp  dump_cow_se.py
demos/cow_se/tests/: test_cow_se.py
demos/incubator/: CMakeLists.txt  README.md  barn_storage.fbs  cmake_sdk.sed  demo_script.md  gaia_conf.toml  gdev.cfg  incubator.cpp  incubator.ddl  incubator.ruleset  main.cpp  rules.cpp
demos/incubator_temperature_control/: README.md
demos/ros_incubator/: README.md  gdev.cfg
demos/rules/: CMakeLists.txt
demos/rules/RuleSubscriber/: CMakeLists.txt  README.md  RuleSubscriber.cpp  test_rules2.cpp
demos/rules/rule_subscriber/: CMakeLists.txt
demos/scripts/gremlin/: README.md  airport.groovy  airport_full.groovy  airport_one_edge.groovy  airport_q1.groovy
demos/tools/: CMakeLists.txt
demos/tools/rule_subscriber/: CMakeLists.txt  README.md  RuleSubscriber.cpp  gen_rules.sh  init_rules.cpp  test_rule_subscriber.cpp  test_rule_subscriber_no_tx.cpp  test_rules.cpp  test_rules.hpp  test_rules_no_tx.hpp
production/: .clang-format  CMakeLists.txt  README.md  bar  baz  foo  gaia.conf  gaia_conf.toml  gaia_log.conf  gdev.cfg  log_conf.toml  prodbuild-gdev.sh  raw_dockerfile
production/Release/: gdev.cfg
production/api/: gaia_direct.h
production/benchmarks/: CMakeLists.txt
production/benchmarks/inc/: benchmark_test_base.hpp  db_server_cmd.hpp  gaiac_cmd.hpp  resource_manager.hpp  (+1 more)
production/catalog/: CMakeLists.txt  README.md  catalog.fbs
production/cmake/: CMakeGraphVizOptions.cmake  gaia.cmake  gaia_build.cmake  gaia_internal.cmake  gaia_ros2.cmake  gaia_version.cmake  gdev.cfg
production/common/: CMakeLists.txt
production/coverage/: .lcovrc  Pipfile  README.md  copy_after_line.py  coverage.sh  gdev.cfg  gen_coverage.sh  llvm-gcov.sh  summarize.py
production/database_engine/: README.md
production/db/: CMakeLists.txt  README.md
production/direct_access/: CMakeLists.txt
production/docs/: CMakeLists.txt  README.md  doxyfile  doxyfile_original
production/examples/: CMakeLists.txt  LICENSE.txt  README.md
production/fdw/: CMakeLists.txt  README.md  gdev.cfg
production/inc/: README.md
production/java/: CMakeLists.txt
production/licenses/: LICENSE.third-party.txt  README.md
production/query_processor/: CMakeLists.txt  README.md
production/ros2/: gdev.cfg
production/rules/: CMakeLists.txt  README.md
production/rules_engine/: README.md
production/schemas/: CMakeLists.txt  README.md  addr_book.ddl  build_db_ddl.cmake
production/sdk/: CMakeLists-incubator.txt  CMakeLists.txt  README.md  changelog  control  copyright  gaia.conf  gaia.spec  postinst  preinst  readme.md
production/sql/: CMakeLists.txt  README.md  gdev.cfg
production/system/: CMakeLists.txt
production/tests/: CMakeLists.txt  Pipfile  README.md  execute_suites.sh  install_sdk_build.sh  lint.sh  llvm.sh  long_suites.sh  mink.cpp  mink.ruleset  mink.ruleset.orig  observations.md  performance_suites.sh  release_long_no_persistence_suite.sh  release_long_no_persistence_suites.sh  release_long_persistence_suite.sh  release_long_persistence_suites.sh  release_suites.sh  reporting-template.md  reset_database.sh  run.sh  smoke_suites.sh  smoke_suites_with_persistence.sh  suite.sh  test.sh  test_retail_assert.cpp
production/tools/: CMakeLists.txt
scratch/laurentiu/: .gitignore  CMakeLists.txt  README.md
test/: CMakeLists.txt  README.md  build.sh  incubator.cpp  incubator.rulenew  incubator.ruleset  install.sh  install_sdk_build.sh  lint.sh  mink.cpp  mink.ddl  mink.rulenew  properties.sh  proposal.md  reporting-template.md  reset_database.sh  restart_server.sh  suite.sh  test.sh
test/python/: generate_config.py  summarize_results.py  translate_to_csv.py
test/tests/: suite-multiples.txt  suite-repeat.txt  suite-smoke-repeat.txt  suite-smoke-test.txt  suite-smoke.txt  suite-threads.txt
(+2800 files in other folders)
